--- a/ability.css
+++ b/ability.css
@@ -1,3 +1,4 @@
+/*스킬*/
 :root {
   --color-light-white: #eeeeee;
   --color-dark-white: #bdbdbd;
@@ -119,6 +120,7 @@ a {
   margin: auto;
 }
 
+/*프로젝트*/
 #titlemywork {
   margin-top: 100px;
   margin-bottom: 20px;
